Added meta data

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="the great escape of boris bones!"
+      content="Boris Bones is sick of being an evil grunt. Help him escape!"
     />
+    <meta name="title" property="og:title" content="SQL To-Do List" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="public/BorisPic.png" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Boris Bones is sick of being an evil grunt. Help him escape!"
+    />
+    <meta name="author" content="Vada Karlen" />
+    <meta name="author" content="Grant Nichols" />
+    <meta name="author" content="Bermet Tariel" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,10 +39,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-
-
-    </div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
