fixed metadata mistake

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,17 @@
       name="description"
       content="Boris Bones is sick of being an evil grunt. Help him escape!"
     />
-    <meta name="title" property="og:title" content="SQL To-Do List" />
+    <meta
+      name="title"
+      property="og:title"
+      content="The Peaceful Pursuit of Boris Bones"
+    />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="public/BorisPic.png" />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/BorisPic.png"
+    />
     <meta
       name="description"
       property="og:description"
